tests/positive/basic/glyph_ascii/input.ci
void main() {
    print(glyphAt("hello", 1) + "\n");
}
