tests/negative/runtime/glyphat_utf8_negative/input.ci
void main() {
    print(glyphAt("é", -1) + "\n");
}
